// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <SlidePanel
    panelBehavior="overlay"
    panelPosition="end"
    panelSize="small"
  >
    <div
      className="slide-panel orion-fusion-theme"
      data-slide-panel-panel-behavior="overlay"
      data-slide-panel-panel-position="end"
      data-slide-panel-panel-size="small"
    >
      <div
        className="main"
        key="main"
        onClick={[Function]}
        onKeyUp={[Function]}
        role="main"
        tabIndex="-1"
      />
      <div
        aria-hidden="true"
        className="panel"
        key="panel"
        role="region"
        tabIndex="-1"
      >
        <VisuallyHiddenText>
          <span
            className="visually-hidden-text"
          />
        </VisuallyHiddenText>
      </div>
    </div>
  </SlidePanel>
</ThemeContextProvider>
`;

exports[`should override user provided attributes that aren't className 1`] = `
<div
  class="slide-panel pad-this-slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
  data-test-attr="ahoy thar"
>
  <div
    class="main"
    role="main"
    tabindex="-1"
  />
  <div
    aria-hidden="true"
    class="panel"
    role="region"
    tabindex="-1"
  >
    <span
      class="visually-hidden-text"
    />
  </div>
</div>
`;

exports[`should render a SlidePanel with a fullscreen state 1`] = `
<div
  className="slide-panel is-fullscreen"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    class="main"
    role="main"
    tabindex="-1"
  />
  <div
    aria-hidden="true"
    class="panel"
    role="region"
    tabIndex="-1"
  >
    <span
      class="visually-hidden-text"
    />
  </div>
</div>
`;

exports[`When a SlidePanel is rendered should render a SlidePanel with an open state 1`] = `
<div
  className="slide-panel is-open"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    class="main"
    role="main"
    tabindex="-1"
  />
  <div
    aria-hidden="false"
    class="panel"
    role="region"
    tabIndex="-1"
  >
    <span
      class="visually-hidden-text"
    />
  </div>
</div>
`;

exports[`When a SlidePanel is rendered should render a SlidePanel with fill 1`] = `
<div
  className="slide-panel fill"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    class="main"
    role="main"
    tabindex="-1"
  />
  <div
    aria-hidden="true"
    class="panel"
    role="region"
    tabIndex="-1"
  >
    <span
      class="visually-hidden-text"
    />
  </div>
</div>
`;

exports[`When a SlidePanel is rendered should render a SlidePanel with main content 1`] = `
<div
  className="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    aria-hidden="false"
    className="main"
    key="main"
    onClick={[Function]}
    onKeyUp={[Function]}
    role="main"
    tabIndex="-1"
  >
    <p>
      Main Content
    </p>
  </div>
  <div
    aria-hidden="true"
    className="panel"
    key="panel"
    role="region"
    tabIndex="-1"
  >
    <VisuallyHiddenText />
  </div>
</div>
`;

exports[`should render a SlidePanel with main content and panel content 1`] = `
<div
  className="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    class="main"
    role="main"
    tabIndex="-1"
  >
    <span
      class="visually-hidden-text"
      id="detail-panel-warning"
      tabindex="-1"
    >
      Terra.slidePanel.discloseWarning
    </span>
    <p>
      Main Content
    </p>
  </div>
  <div
    aria-hidden="true"
    class="panel"
    role="region"
    tabIndex="-1"
  >
    <span
      class="visually-hidden-text"
    />
  </div>
</div>
`;

exports[`When a SlidePanel is rendered should render a SlidePanel with panel content 1`] = `
<div
  className="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    class="main"
    role="main"
    tabindex="-1"
  />
  <div
    aria-hidden="true"
    class="panel"
    role="region"
    tabIndex="-1"
  >
    <span
      class="visually-hidden-text"
    />
    <p>
      Panel Content
    </p>
  </div>
</div>
`;

exports[`When a SlidePanel is rendered should render a SlidePanel with panelAriaLabel and mainAriaLabel specified 1`] = `
<div
  className="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    aria-label="Main content area"
    className="main"
    key="main"
    onClick={[Function]}
    onKeyUp={[Function]}
    role="main"
    tabindex="-1"
  />
  <div
    aria-hidden="true"
    aria-label="Panel content area"
    className="panel"
    key="panel"
    role="region"
    tabIndex="-1"
  >
    <VisuallyHiddenText
      text="Panel content area"
    />
  </div>
</div>
`;

exports[`When a SlidePanel is rendered should render a SlidePanel with panelBehavior = overlay 1`] = `
<div
  className="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    class="main"
    role="main"
    tabindex="-1"
  />
  <div
    aria-hidden="true"
    class="panel"
    role="region"
    tabIndex="-1"
  >
    <span
      class="visually-hidden-text"
    />
  </div>
</div>
`;

exports[`When a SlidePanel is rendered should render a SlidePanel with panelBehavior = squish 1`] = `
<div
  className="slide-panel"
  data-slide-panel-panel-behavior="squish"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    class="main"
    role="main"
    tabindex="-1"
  />
  <div
    aria-hidden="true"
    class="panel"
    role="region"
    tabIndex="-1"
  >
    <span
      class="visually-hidden-text"
    />
  </div>
</div>
`;

exports[`When a SlidePanel is rendered should render a SlidePanel with panelPosition = end 1`] = `
<div
  className="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    class="main"
    role="main"
    tabindex="-1"
  />
  <div
    aria-hidden="true"
    class="panel"
    role="region"
    tabIndex="-1"
  >
    <span
      class="visually-hidden-text"
    />
  </div>
</div>
`;

exports[`When a SlidePanel is rendered should render a SlidePanel with panelPosition = start 1`] = `
<div
  className="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="start"
  data-slide-panel-panel-size="small"
>
  <div
    aria-hidden="true"
    class="panel"
    role="region"
    tabIndex="-1"
  >
    <span
      class="visually-hidden-text"
    />
  </div>
  <div
    class="main"
    role="main"
    tabindex="-1"
  />
</div>
`;

exports[`When a SlidePanel is rendered should render a SlidePanel with panelSize = large 1`] = `
<div
  className="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="large"
>
  <div
    class="main"
    role="main"
    tabindex="-1"
  />
  <div
    aria-hidden="true"
    class="panel"
    role="region"
    tabIndex="-1"
  >
    <span
      class="visually-hidden-text"
    />
  </div>
</div>
`;

exports[`When a SlidePanel is rendered should render a SlidePanel with panelSize = small 1`] = `
<div
  className="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    class="main"
    role="main"
    tabindex="-1"
  />
  <div
    aria-hidden="true"
    class="panel"
    role="region"
    tabIndex="-1"
  >
    <span
      class="visually-hidden-text"
    />
  </div>
</div>
`;

exports[`When a SlidePanel is rendered should render a SlidePanel with the given extra attributes 1`] = `
<div
  className="slide-panel pad-this-slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
  data-test-attr="ahoy thar"
  id="my-slide-panel"
>
  <div
    class="main"
    role="main"
    tabindex="-1"
  />
  <div
    aria-hidden="true"
    class="panel"
    role="region"
    tabIndex="-1"
  >
    <span
      class="visually-hidden-text"
    />
  </div>
</div>
`;

exports[`When a SlidePanel is rendered should render a default SlidePanel with no props 1`] = `
<div
  className="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    class="main"
    role="main"
    tabindex="-1"
  />
  <div
    aria-hidden="true"
    class="panel"
    role="region"
    tabIndex="-1"
  >
    <span
      class="visually-hidden-text"
    />
  </div>
</div>
`;
